re-word the index files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <title>Alexander Arkhipov's</title>
 <body>
 <pre>
-I am Alexander, the insane Unix hacker and owner of alearx.org. To
-know more, please see the README file.
+I am Alexander, the insane Unix hacker and owner of alearx.org. For
+more information, please see the README file.
 
 <a href="README.txt">README</a>
 
