--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ more information, please see the README file.
 <a href="news/">news</a>
 <a href="pub/">ftp</a>
 <a href="git/">git</a>
+
+<a href="ln.html">links</a>
 </pre>
 </body>
 </html>
