--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <title>Alexander Arkhipov's</title>
+<link rel="icon" type="image/png" href="favicon.png">
 <body>
 <pre>
 I am Alexander, the insane Unix hacker and owner of alearx.org. For
@@ -15,6 +16,7 @@ more information, please see the README file.
 <a href="news/">news</a>
 <a href="pub/">ftp</a>
 <a href="git/">git</a>
+<a href="gallery.html">gallery</a>
 
 <a href="ln.html">links</a>
 </pre>
