Huge November 2023 update
This update implements most of the changes I've been thinking about for
the last half-a-year:

- I wish to serve files over many protocols: http, gopher, ftp, rsync
  and finger, and maybe even things like gemini in future.
- I wish to maintain a history of changes as a git repository.
- Maintaining the above, I don't want to do more things manually than
  necessary.
- Maintaining a sensible news feed is something I've been struggling
  with since beginning -- I wish to minimise that.
- I've written a lot of things here while angry at the entire world.
  I am a much calmer person now, and wish my former frustrations gone.

--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,18 @@
 	<small><br>my books</small>
 	</td>
 </tr>
+<tr>
+	<td align=center>
+	</td>
+	<td align=center>
+	<img src="pub/photos/xlib.jpeg" width=250 height=187
+	    alt="Xlib programming manual"
+	    title="Arrived from England, and actually ended up costing a bit more than I'd like -- will try to do it a bit differently next time.">
+	<small><br>2023-07-11</small>
+	</td>
+	<td align=center>
+	</td>
+</tr>
 </table>
 
 </body>
