--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <meta charset="UTF-8">
 <title>Alexander Arkhipov's</title>
 <link rel="icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
-<pre>
-I am Alexander, the insane Unix hacker and owner of alearx.org. For
-more information, please see the README file.
+<p>I am Alexander. I write programs.</p>
 
-<a href="README.txt">README</a>
-
-<a href="art/">articles</a>
-<a href="plan.txt">plan</a>
-<a href="feed.ass">feed</a>
-<a href="news/">news</a>
-<a href="pub/">ftp</a>
-<a href="git/">git</a>
-<a href="gallery.html">gallery</a>
-
-<a href="ln.html">links</a>
-</pre>
+<hr>
+<ul>
+	<li><a href="project.txt">project</a></li>
+</ul>
+<hr>
+<ul>
+	<li><a href="art/">articles</a></li>
+	<li><a href="plan.txt">plan</a></li>
+	<li><a href="feed.ass">feed</a></li>
+	<li><a href="news/">news</a></li>
+	<li><a href="pub/">ftp</a></li>
+	<li><a href="git/">git</a></li>
+	<li><a href="gallery.html">gallery</a></li>
+</ul>
+<hr>
+<ul>
+	<li><a href="ln.html">links</a></li>
+</ul>
+<hr>
 </body>
 </html>
