simplify html, and add the geek code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
-<title>Alexander Arkhipov's</title>
-<body>
-<p>I am Alexander. I write programs.</p>
-
-<hr>
+<p>I am Alexander. Here's my geek code:</p>
+<pre>
+-----BEGIN GEEK CODE BLOCK-----
+Version: 3.1
+GCS d+@ s+:+ a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w--- !O
+!M !V !PS PE Y? PGP+ t? 5? X? R?>+++ !tv b++ DI? D+ G e++ h+@ !r?>+++ !y
+-----END GEEK CODE BLOCK-----
+</pre>
 <ul>
 	<li><a href="project.txt">project</a></li>
 	<li><a href="plan.txt">plan</a></li>
@@ -21,6 +21,3 @@
 <ul>
 	<li><a href="ln.html">links</a></li>
 </ul>
-<hr>
-</body>
-</html>
