--- a/ln.html
+++ b/ln.html
@@ -1,22 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
-<title>links</title>
-<body>
-<pre>
-These are http links. For gopher links, please see
-<a href="gopher://alearx.org/1/ln.gph">gopher://alearx.org/1/ln.gph</a>
+<p><a href="index.html">index</a></p>
 
-<a href="index.html">index</a>
-
-<a href="https://github.com/alearkh">my github profile</a>
-<a href="https://www.openbsd.org">OpenBSD</a>
-<a href="https://suckless.org">suckless.org</a>
-<a href="https://wttr.in">Weather reports for TTYs</a>
-<a href="https://www.tuhs.org">The Unix Heritage Socienty</a>
-<a href="https://useplaintext.email">Use plain text email</a>
-<a href="https://www.gnu.org/philosophy/no-word-attachments.html">rms' attempt to put an end to word attachements</a>
-
-</pre>
-</body>
-</html>
+<ul>
+	<li><a href="https://github.com/alearkh">my github profile</a></li>
+	<li><a href="https://www.openbsd.org">OpenBSD</a></li>
+	<li><a href="https://suckless.org">suckless.org</a></li>
+	<li><a href="https://wttr.in">Weather reports for TTYs</a></li>
+	<li><a href="https://www.tuhs.org">The Unix Heritage Socienty</a></li>
+	<li><a href="https://useplaintext.email">Use plain text email</a></li>
+	<li><a href="https://www.gnu.org/philosophy/no-word-attachments.html">
+	    rms' attempt to put an end to word attachements</a></li>
+</ul>
