--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
-<title>Gallery</title>
-<body>
-<a href="index.html">index</a>
-
+<p><a href="index.html">index</a></p>
 
 <table align=center>
 <tr>
@@ -43,6 +37,3 @@
 	</td>
 </tr>
 </table>
-
-</body>
-</html>
