update files for new layout with global pub and git

--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<p><a href="index.html">index</a></p>
+<p><a href="index.html">~</a></p>
 
 <table align=center>
 <tr>
@@ -12,15 +12,18 @@
 <table align=center>
 <tr>
 	<td align=center>
-	<img src="pub/photos/angelina.jpeg" width=250 height=187 alt="Angelina the cat">
+	<img src="../../pub/usr/aa/photos/angelina.jpeg" width=250 height=187
+	    alt="Angelina the cat">
 	<small><br>my cat Angelina</small>
 	</td>
 	<td align=center>
-	<img src="pub/photos/belka.jpeg" width=250 height=187 alt="Belka the cat">
+	<img src="../../pub/usr/aa/photos/belka.jpeg" width=250 height=187
+	    alt="Belka the cat">
 	<small><br>my other cat Belka</small>
 	</td>
 	<td align=center>
-	<img src="pub/photos/books.jpeg" width=250 height=187 alt="bookshelf">
+	<img src="../../pub/usr/aa/photos/books.jpeg" width=250 height=187
+	    alt="bookshelf">
 	<small><br>my books</small>
 	</td>
 </tr>
@@ -28,7 +31,7 @@
 	<td align=center>
 	</td>
 	<td align=center>
-	<img src="pub/photos/xlib.jpeg" width=250 height=187
+	<img src="../../pub/usr/aa/photos/xlib.jpeg" width=250 height=187
 	    alt="Xlib programming manual"
 	    title="Arrived from England, and actually ended up costing a bit more than I'd like -- will try to do it a bit differently next time.">
 	<small><br>2023-07-11</small>
