--- a/ln.html
+++ b/ln.html
@@ -1,4 +1,4 @@
-<p><a href="index.html">index</a></p>
+<p><a href="index.html">~</a></p>
 
 <ul>
 	<li><a href="https://github.com/alearkh">my github profile</a></li>
