add the hacks directory

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 </ul>
 <hr>
 <ul>
+	<li><a href="hacks/">hacks</a></li>
 	<li><a href="art/">articles</a></li>
 	<li><a href="gallery.html">gallery</a></li>
 </ul>
