--- a/foss.html
+++ b/foss.html
@@ -5,7 +5,7 @@
 </p>
 <p>
 	I sometimes have to use github for collaboration. See the
-	<a href="https://github.com/alearkh">alearkh account</a>.
+	<a href="https://github.com/aamanpager">aamanpager account</a>.
 </p>
 <ol>
 	<li><a href="https://marc.info/?l=openbsd-ports&w=2&r=1&s=alexander+arkhipov&q=b">
@@ -14,6 +14,6 @@
 	    got</a></li>
 	<li><a href="https://git.omarpolo.com/?action=blob&commit=58798c65e0a9961b550b9a0bb911c29c422a20ee&file=pwg&folder=&path=plass.git">
 	    plass</a></li>
-	<li><a href="https://github.com/alexbatalov/fallout2-ce/pulls?q=author%3Aalearkh+">
+	<li><a href="https://github.com/alexbatalov/fallout2-ce/pulls?q=author%3Aaamanpager+">
 	    fallout2-ce</a></li>
 </ol>
