gallery.html: fix path

--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <table align=center>
 <tr>
 	<td align=center>
-	<img src="pub/photos/me.jpeg" width=500 height=375 alt="me">
+	<img src="../../pub/usr/aa/photos/me.jpeg" width=500 height=375 alt="me">
 	<br>that's me
 	</td>
 </tr>
