ln.html: update github link

--- a/ln.html
+++ b/ln.html
@@ -2,7 +2,7 @@
 <p><a href="index.html">~</a></p>
 
 <ul>
-	<li><a href="https://github.com/alearkh">my github profile</a></li>
+	<li><a href="https://github.com/aamanpager">my github profile</a></li>
 	<li><a href="https://www.openbsd.org">OpenBSD</a></li>
 	<li><a href="https://suckless.org">suckless.org</a></li>
 	<li><a href="https://wttr.in">Weather reports for TTYs</a></li>
