--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 <ul>
 	<li><a href="hacks/">hacks</a></li>
 	<li><a href="art/">articles</a></li>
+	<li><a href="thoughts/">thoughts</a></li>
 	<li><a href="gallery.html">gallery</a></li>
 </ul>
 <hr>
