--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 !r?>+++ !y
 -----END GEEK CODE BLOCK-----
 </pre>
+
+<p>Content under <a href=https://creativecommons.org/licenses/by/4.0/legalcode>CC-BY-4.0</a>.</p>
+
 <ul>
 	<li><a href="project.txt">project</a></li>
 	<li><a href="plan.txt">plan</a></li>
