--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,7 @@
 <title>aa: gallery</title>
 <p><a href="index.html">~</a></p>
 
+<h1>Moscow</h1>
 <table align=center>
 <tr>
 	<td align=center>
@@ -40,4 +41,38 @@
 	<td align=center>
 	</td>
 </tr>
+
+<hr>
+<h1>Kutaisi</h1>
+
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_centre.jpeg" width=250
+	    alt="me in the centre of Kutaisi">
+	<small><br>Kutaisi centre</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg" width=250
+	    alt="a horrible commie block">
+	<small><br>the worst commie block ever!</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg" width=250
+	    alt="stairs">
+	<small><br>some stairs</small>
+	</td>
+</tr>
+<tr>
+	<td align=center>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg" width=250
+	    alt="drawing on a wall, with a man in hazmat suit">
+	<small><br>some wall art</small>
+	</td>
+	<td align=center>
+	</td>
+</tr>
+
 </table>
