--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,7 @@
 	<td align=center>
 	</td>
 </tr>
+</table>
 
 <hr>
 <h1>Kutaisi</h1>
@@ -74,5 +75,4 @@
 	<td align=center>
 	</td>
 </tr>
-
 </table>
