--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <title>aa: gallery</title>
 <p><a href="index.html">~</a></p>
 
-<h1>Moscow</h1>
+<h1><center>Moscow</center></h1>
 <table align=center>
 <tr>
 	<td align=center>
@@ -44,8 +44,7 @@
 </table>
 
 <hr>
-<h1>Kutaisi</h1>
-
+<h1><center>Kutaisi</center></h1>
 <table align=center>
 <tr>
 	<td align=center>
