add descriptions to each heading in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,13 @@
 <p><a href="index.html">~</a></p>
 
 <h1><center>Moscow</center></h1>
+
+<p>
+	A terrible city in a rotten country. I existed there for most of my
+	life.  All the photos are taken inside my home, the only place I
+	somewhat cared for there.
+</p>
+
 <table align=center>
 <tr>
 	<td align=center>
@@ -43,8 +50,17 @@
 </tr>
 </table>
 
+
 <hr>
 <h1><center>Kutaisi</center></h1>
+
+<p>
+	A very ancient city. The third largest in Georgia. (For the American
+	readers: no, the other one.) Arrived here at the beginning of 2024, and
+	will mostly stay here until at least the beginning of 2025. So far, it's
+	the best time of my life!
+</p>
+
 <table align=center>
 <tr>
 	<td align=center>
