--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 <ul>
 	<li><a href="project.txt">project</a></li>
 	<li><a href="plan.txt">plan</a></li>
+	<li><a href="plan/">plan archive</a></li>
 </ul>
 <hr>
 <ul>
