add the about.txt file

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ GCS d+@ s+:- a-- C++ UB+++(L++$) P+ L+(++$) E--- W- !N>+ o? K? w---
 	<li><a href="project.txt">project</a></li>
 	<li><a href="plan.txt">plan</a></li>
 	<li><a href="plan/">plan archive</a></li>
+	<li><a href="about.txt">about</a></li>
 </ul>
 <hr>
 <ul>
