--- a/gallery.html
+++ b/gallery.html
@@ -81,6 +81,9 @@
 </tr>
 <tr>
 	<td align=center>
+	<img src="../../pub/usr/aa/photos/small/kutaisi_colchis_fountain.jpeg" width=250
+	    alt="the Colchis fountain">
+	<small><br>Colchis fountain</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg" width=250
