acknowledge the finger

--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,8 @@
 <tr>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_colchis_fountain.jpeg" width=250
-	    alt="the Colchis fountain">
+	    alt="the Colchis fountain"
+	    title="just realised I have my finger on the camera :^)">
 	<small><br>Colchis fountain</small>
 	</td>
 	<td align=center>
