add the white bridge photo

--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,10 @@
 	<small><br>some wall art</small>
 	</td>
 	<td align=center>
+	<img src="../../pub/usr/aa/photos/small/kutaisi_white_bridge.jpeg"
+	    width=250 alt="the White Bridge, viewed from the top of a hill"
+	    title="You can climb here using the funicular, though I haven't used it so far, climbing the stairs instead. The hill itself is pretty boring -- it's one of those 'does any of it even work?' amusement parks.">
+	<small><br>the White Bridge</small>
 	</td>
 </tr>
 </table>
