--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,8 @@
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg" width=250
-	    alt="stairs">
+	    alt="stairs"
+	    title="Behind (i.e. at the top) (not seen) is a statue of King David the Builder. It's pretty much like all the other equestrian statues you've probably seen -- nothing very interesting. Except that this one is in front of a train station.">
 	<small><br>some stairs</small>
 	</td>
 </tr>
