--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,12 @@
 <title>aa: gallery</title>
-<p><a href="index.html">~</a></p>
+<h1><center><a href="index.html">~</a></center></h1>
 
+<hr>
 <h1><center>Moscow</center></h1>
 
 <p>
 	A terrible city in a rotten country. I existed there for most of my
-	life.  All the photos are taken inside my home, the only place I
+	life. All the photos are taken inside my home, the only place I
 	somewhat cared for there.
 </p>
 
@@ -64,17 +65,20 @@
 <table align=center>
 <tr>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/kutaisi_centre.jpeg" width=250
+	<img src="../../pub/usr/aa/photos/kutaisi_centre.jpeg"
+	    width=250 height=333
 	    alt="me in the centre of Kutaisi">
 	<small><br>Kutaisi centre</small>
 	</td>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg" width=250
+	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg"
+	    width=250 height=187
 	    alt="a horrible commie block">
 	<small><br>the worst commie block ever!</small>
 	</td>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg" width=250
+	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg"
+	    width=250 height=187
 	    alt="stairs"
 	    title="Behind (i.e. at the top) (not seen) is a statue of King David the Builder. It's pretty much like all the other equestrian statues you've probably seen -- nothing very interesting. Except that this one is in front of a train station.">
 	<small><br>some stairs</small>
@@ -82,19 +86,22 @@
 </tr>
 <tr>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/small/kutaisi_colchis_fountain.jpeg" width=250
+	<img src="../../pub/usr/aa/photos/small/kutaisi_colchis_fountain.jpeg"
+	    width=250 height=187
 	    alt="the Colchis fountain"
 	    title="just realised I have my finger on the camera :^)">
 	<small><br>Colchis fountain</small>
 	</td>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg" width=250
+	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
+	    width=250 height=187
 	    alt="drawing on a wall, with a man in hazmat suit">
 	<small><br>some wall art</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_white_bridge.jpeg"
-	    width=250 alt="the White Bridge, viewed from the top of a hill"
+	    width=250 height=187
+	    alt="the White Bridge, viewed from the top of a hill"
 	    title="You can climb here using the funicular, though I haven't used it so far, climbing the stairs instead. The hill itself is pretty boring -- it's one of those 'does any of it even work?' amusement parks.">
 	<small><br>the White Bridge</small>
 	</td>
