add new books photo

--- a/gallery.html
+++ b/gallery.html
@@ -107,4 +107,17 @@
 	<small><br>the White Bridge</small>
 	</td>
 </tr>
+<tr>
+	<td align=center>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
+	    width=250 height=207
+	    alt="four books: The C Programming Language, Expert C Programming, You Can Negotiate Anything and The Minimalist Enterpreneur">
+	<small><br>so relieved I can finally get books from overseas without
+	    jumping through hoops</small>
+	</td>
+	<td align=center>
+	</td>
+</tr>
 </table>
