further adjustments to the gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,11 @@
 	    width=250 height=187
 	    alt="the Colchis fountain"
 	    title="just realised I have my finger on the camera :^)">
-	<small><br>Colchis fountain</small>
+	<small>
+		<br>Colchis fountain
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_colchis_fountain.jpeg">
+		    original size</a>)
+	</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
@@ -104,7 +108,11 @@
 	    width=250 height=187
 	    alt="the White Bridge, viewed from the top of a hill"
 	    title="You can climb here using the funicular, though I haven't used it so far, climbing the stairs instead. The hill itself is pretty boring -- it's one of those 'does any of it even work?' amusement parks.">
-	<small><br>the White Bridge</small>
+	<small>
+		<br>the White Bridge
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_white_bridge.jpeg">
+		    original size</a>)
+	</small>
 	</td>
 </tr>
 <tr>
@@ -113,9 +121,13 @@
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_books.jpeg"
 	    width=250 height=207
-	    alt="four books: The C Programming Language, Expert C Programming, You Can Negotiate Anything and The Minimalist Enterpreneur">
-	<small><br>so relieved I can finally get books from overseas without
-	    jumping through hoops</small>
+	    alt="four books: The C Programming Language, Expert C Programming, You Can Negotiate Anything and The Minimalist Enterpreneur"
+	    title="so relieved I can finally get books from overseas without jumping through hoops">
+	<small>
+		<br>new books from America!
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_books.jpeg">
+		    original size</a>)
+	</small>
 	</td>
 	<td align=center>
 	</td>
