--- a/gallery.html
+++ b/gallery.html
@@ -93,8 +93,7 @@
 	    title="just realised I have my finger on the camera :^)">
 	<small>
 		<br>Colchis fountain
-		<br>(<a href="../../pub/usr/aa/photos/kutaisi_colchis_fountain.jpeg">
-		    original size</a>)
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_colchis_fountain.jpeg">original size</a>)
 	</small>
 	</td>
 	<td align=center>
@@ -110,8 +109,7 @@
 	    title="You can climb here using the funicular, though I haven't used it so far, climbing the stairs instead. The hill itself is pretty boring -- it's one of those 'does any of it even work?' amusement parks.">
 	<small>
 		<br>the White Bridge
-		<br>(<a href="../../pub/usr/aa/photos/kutaisi_white_bridge.jpeg">
-		    original size</a>)
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_white_bridge.jpeg">original size</a>)
 	</small>
 	</td>
 </tr>
@@ -125,8 +123,7 @@
 	    title="so relieved I can finally get books from overseas without jumping through hoops">
 	<small>
 		<br>new books from America!
-		<br>(<a href="../../pub/usr/aa/photos/kutaisi_books.jpeg">
-		    original size</a>)
+		<br>(<a href="../../pub/usr/aa/photos/kutaisi_books.jpeg">original size</a>)
 	</small>
 	</td>
 	<td align=center>
