--- a/gallery.html
+++ b/gallery.html
@@ -115,6 +115,14 @@
 </tr>
 <tr>
 	<td align=center>
+	<img src="../../pub/usr/aa/photos/small/hat.jpeg"
+	    width=250 height=207
+	    alt="drawing of a hat, with said hat nearby"
+	    title="thanks, Polina!">
+	<small>
+		<br>I can draw!
+		<br>(<a href="../../pub/usr/aa/photos/hat.jpeg">original size</a>)
+	</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_books.jpeg"
