--- a/gallery.html
+++ b/gallery.html
@@ -3,58 +3,8 @@
 
 
 <hr>
-<h1><center>Moscow</center></h1>
-
-<p>
-	A terrible city in a rotten country. I existed there for most of my
-	life. All the photos are taken inside my home, the only place I
-	somewhat cared for there.
-</p>
-
-<table align=center>
-<tr>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/me.jpeg" width=500 height=375 alt="me">
-	<br>that's me
-	</td>
-</tr>
-</table>
-
-<table align=center>
-<tr>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/angelina.jpeg" width=250 height=187
-	    alt="Angelina the cat">
-	<small><br>my cat Angelina</small>
-	</td>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/belka.jpeg" width=250 height=187
-	    alt="Belka the cat">
-	<small><br>my other cat Belka</small>
-	</td>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/books.jpeg" width=250 height=187
-	    alt="bookshelf">
-	<small><br>my books</small>
-	</td>
-</tr>
-<tr>
-	<td align=center>
-	</td>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/xlib.jpeg" width=250 height=187
-	    alt="Xlib programming manual"
-	    title="Arrived from England, and actually ended up costing a bit more than I'd like -- will try to do it a bit differently next time.">
-	<small><br>2023-07-11</small>
-	</td>
-	<td align=center>
-	</td>
-</tr>
-</table>
-
-
-<hr>
 <h1><center>Kutaisi</center></h1>
+<details><summary>Best time of my life</summary>
 
 <p>
 	A very ancient city. The third largest in Georgia. (For the American
@@ -138,3 +88,57 @@
 	</td>
 </tr>
 </table>
+</details>
+
+
+<hr>
+<h1><center>Moscow</center></h1>
+<details><summary>WARNING: depression and sadness and stuff</summary>
+
+<p>
+	A terrible city in a rotten country. I existed there for most of my
+	life. All the photos are taken inside my home, the only place I
+	somewhat cared for there.
+</p>
+
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/me.jpeg" width=500 height=375 alt="me">
+	<br>that used to be me
+	</td>
+</tr>
+</table>
+
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/angelina.jpeg" width=250 height=187
+	    alt="Angelina the cat">
+	<small><br>my cat Angelina</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/belka.jpeg" width=250 height=187
+	    alt="Belka the cat">
+	<small><br>my other cat Belka</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/books.jpeg" width=250 height=187
+	    alt="bookshelf">
+	<small><br>my books</small>
+	</td>
+</tr>
+<tr>
+	<td align=center>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/xlib.jpeg" width=250 height=187
+	    alt="Xlib programming manual"
+	    title="Arrived from England, and actually ended up costing a bit more than I'd like -- will try to do it a bit differently next time.">
+	<small><br>2023-07-11</small>
+	</td>
+	<td align=center>
+	</td>
+</tr>
+</table>
+</details>
