--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,11 @@
 <h1><center>Kutaisi</center></h1>
 <details><summary>Best time of my life</summary>
 
+<blockquote>
+	<p>It's like breathing air!</p>
+	<footer>- Anonymous, 2024, regarding the Kutaisi weather</footer>
+</blockquote>
+
 <p>
 	A very ancient city. The third largest in Georgia. (For the American
 	readers: no, the other one.) Arrived here at the beginning of 2024, and
