--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
 <details><summary>Best time of my life</summary>
 
 <blockquote>
-	<p>It's like breathing air!</p>
+	<p>It's like breathing water!</p>
 	<footer>- Anonymous, 2024, regarding the Kutaisi weather</footer>
 </blockquote>
 
