correct info about Kutaisi

--- a/gallery.html
+++ b/gallery.html
@@ -12,10 +12,10 @@
 </blockquote>
 
 <p>
-	A very ancient city. The third largest in Georgia. (For the American
-	readers: no, the other one.) Arrived here at the beginning of 2024, and
-	will mostly stay here until at least the beginning of 2025. So far, it's
-	the best time of my life!
+	A very ancient city. The third^Wfourth largest in Georgia. (For the
+	American readers: no, the other one.) Arrived here at the beginning of
+	2024, and will mostly stay here until at least the beginning of 2025.
+	So far, it's the best time of my life!
 </p>
 
 <table align=center>
