add photos from Racha

--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 
 
 <hr>
-<h1><center>Kutaisi</center></h1>
+<h1><center>Kutaisi (2024 - `date +%Y`)</center></h1>
 <details><summary>Best time of my life</summary>
 
 <blockquote>
@@ -93,11 +93,79 @@
 	</td>
 </tr>
 </table>
+
+<h2><center>Nikortsminda (July 2024)</center></h2>
+<p>
+	A small village in Racha with the eponymous cathedral in the
+	centre. Can be roughly translated as St. Nicholas'. For the
+	videos from the equestrian competition held there, see <a
+	href="../../pub/usr/aa/photos/racha.equestrian/">here</a>.
+</p>
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_nikortsmindacathedral1.jpg"
+	    width=250 height=187
+	    alt="the Nikortsminda cathedral">
+	<small>
+		<br>the Nikortsminda cathedral
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_nikortsmindacathedral1.jpg">original size</a>)
+	</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_nikortsmindacathedral3.jpg"
+	    width=250 height=187
+	    alt="one of the relief on the Nikortsminda cathedral">
+	<small>
+		<br>one of the relief on the Nikortsminda cathedral
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_nikortsmindacathedral3.jpg">original size</a>)
+	</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_view14.jpg"
+	    width=250 height=187
+	    alt="three trees">
+	<small>
+		<br><!-- nothing -->
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view14.jpg">original size</a>)
+	</small>
+	</td>
+</tr>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_view16.jpg"
+	    width=250 height=187
+	    alt="mountain view from a balcony">
+	<small>
+		<br><!-- nothing -->
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view16.jpg">original size</a>)
+	</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha.equestrian/small/equestrian.jpg"
+	    width=250 height=187
+	    alt="photo from the equestrian competition, featuring the audience near a car at the front, and horsemen themselves at the back">
+	<small>
+		<br>the equestrian competition
+		<br>(<a href="../../pub/usr/aa/photos/racha.equestrian/equestrian.jpg">original size</a>)
+	</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_view28.jpg"
+	    width=250 height=187
+	    alt="view on the city of Tkibuli from a nearby hill">
+	<small>
+		<br>Tkibuli
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view28.jpg">original size</a>)
+	</small>
+	</td>
+</tr>
+</table>
 </details>
 
 
 <hr>
-<h1><center>Moscow</center></h1>
+<h1><center>Moscow (2000 - 2024)</center></h1>
 <details><summary>WARNING: depression and sadness and stuff</summary>
 
 <p>
