--- a/gallery.html
+++ b/gallery.html
@@ -26,18 +26,39 @@
 	    alt="me in the centre of Kutaisi">
 	<small><br>Kutaisi centre</small>
 	</td>
+</tr>
+</table>
+
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/small/hat.jpeg"
+	    width=250 height=187
+	    alt="drawing of a hat, with said hat nearby"
+	    title="thanks, Polina!">
+	<small>
+		<br>I can draw!
+		<br>(<a href="../../pub/usr/aa/photos/hat.jpeg">original size</a>)
+	</small>
+	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg"
 	    width=250 height=187
 	    alt="a horrible commie block">
-	<small><br>the worst commie block ever!</small>
+	<small>
+		<br><!-- nothing -->
+		<br>the worst commie block ever!
+	</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg"
 	    width=250 height=187
 	    alt="stairs"
 	    title="Behind (i.e. at the top) (not seen) is a statue of King David the Builder. It's pretty much like all the other equestrian statues you've probably seen -- nothing very interesting. Except that this one is in front of a train station.">
-	<small><br>some stairs</small>
+	<small>
+		<br><!-- nothing -->
+		<br>some stairs
+	</small>
 	</td>
 </tr>
 <tr>
@@ -55,7 +76,10 @@
 	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
 	    width=250 height=187
 	    alt="drawing on a wall, with a man in hazmat suit">
-	<small><br>some wall art</small>
+	<small>
+		<br><!-- nothing -->
+		<br>some wall art
+	</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_white_bridge.jpeg"
@@ -70,14 +94,6 @@
 </tr>
 <tr>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/small/hat.jpeg"
-	    width=250 height=187
-	    alt="drawing of a hat, with said hat nearby"
-	    title="thanks, Polina!">
-	<small>
-		<br>I can draw!
-		<br>(<a href="../../pub/usr/aa/photos/hat.jpeg">original size</a>)
-	</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/small/kutaisi_books.jpeg"
@@ -101,6 +117,21 @@
 	videos from the equestrian competition held there, see <a
 	href="../../pub/usr/aa/photos/racha.equestrian/">here</a>.
 </p>
+
+<table align=center>
+<tr>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/racha/small/racha_view16.jpg"
+	    width=500 height=375
+	    alt="mountain view from a balcony">
+	<small>
+		<br><!-- nothing -->
+		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view16.jpg">original size</a>)
+	</small>
+	</td>
+</tr>
+</table>
+
 <table align=center>
 <tr>
 	<td align=center>
@@ -115,12 +146,17 @@
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/racha/small/racha_nikortsmindacathedral3.jpg"
 	    width=187 height=250
-	    alt="one of the relief on the Nikortsminda cathedral">
+	    alt="a relief on the cathedral">
 	<small>
 		<br>one of the relief on the Nikortsminda cathedral
 		<br>(<a href="../../pub/usr/aa/photos/racha/racha_nikortsmindacathedral3.jpg">original size</a>)
 	</small>
 	</td>
+</tr>
+</table>
+
+<table align=center>
+<tr>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/racha/small/racha_view14.jpg"
 	    width=250 height=187
@@ -128,17 +164,6 @@
 	<small>
 		<br><!-- nothing -->
 		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view14.jpg">original size</a>)
-	</small>
-	</td>
-</tr>
-<tr>
-	<td align=center>
-	<img src="../../pub/usr/aa/photos/racha/small/racha_view16.jpg"
-	    width=250 height=187
-	    alt="mountain view from a balcony">
-	<small>
-		<br><!-- nothing -->
-		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view16.jpg">original size</a>)
 	</small>
 	</td>
 	<td align=center>
