fix text under the relief picture

--- a/gallery.html
+++ b/gallery.html
@@ -148,7 +148,7 @@
 	    width=187 height=250
 	    alt="a relief on the cathedral">
 	<small>
-		<br>one of the relief on the Nikortsminda cathedral
+		<br>a relief on the cathedral
 		<br>(<a href="../../pub/usr/aa/photos/racha/racha_nikortsmindacathedral3.jpg">original size</a>)
 	</small>
 	</td>
