further rearrange photos and text

--- a/gallery.html
+++ b/gallery.html
@@ -32,33 +32,23 @@
 <table align=center>
 <tr>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/small/hat.jpeg"
-	    width=250 height=187
-	    alt="drawing of a hat, with said hat nearby"
-	    title="thanks, Polina!">
-	<small>
-		<br>I can draw!
-		<br>(<a href="../../pub/usr/aa/photos/hat.jpeg">original size</a>)
-	</small>
-	</td>
-	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg"
 	    width=250 height=187
 	    alt="a horrible commie block">
-	<small>
-		<br><!-- nothing -->
-		<br>the worst commie block ever!
-	</small>
+	<small><br>the worst commie block ever!</small>
 	</td>
 	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_stairs.jpeg"
 	    width=250 height=187
 	    alt="stairs"
 	    title="Behind (i.e. at the top) (not seen) is a statue of King David the Builder. It's pretty much like all the other equestrian statues you've probably seen -- nothing very interesting. Except that this one is in front of a train station.">
-	<small>
-		<br><!-- nothing -->
-		<br>some stairs
-	</small>
+	<small><br>some stairs</small>
+	</td>
+	<td align=center>
+	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
+	    width=250 height=187
+	    alt="drawing on a wall, with a man in hazmat suit">
+	<small><br>some wall art</small>
 	</td>
 </tr>
 <tr>
@@ -73,12 +63,13 @@
 	</small>
 	</td>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/kutaisi_wall_art.jpeg"
+	<img src="../../pub/usr/aa/photos/small/hat.jpeg"
 	    width=250 height=187
-	    alt="drawing on a wall, with a man in hazmat suit">
+	    alt="drawing of a hat, with said hat nearby"
+	    title="thanks, Polina!">
 	<small>
-		<br><!-- nothing -->
-		<br>some wall art
+		<br>I can draw!
+		<br>(<a href="../../pub/usr/aa/photos/hat.jpeg">original size</a>)
 	</small>
 	</td>
 	<td align=center>
@@ -124,10 +115,7 @@
 	<img src="../../pub/usr/aa/photos/racha/small/racha_view16.jpg"
 	    width=500 height=375
 	    alt="mountain view from a balcony">
-	<small>
-		<br><!-- nothing -->
-		<br>(<a href="../../pub/usr/aa/photos/racha/racha_view16.jpg">original size</a>)
-	</small>
+	<small><br>(<a href="../../pub/usr/aa/photos/racha/racha_view16.jpg">original size</a>)</small>
 	</td>
 </tr>
 </table>
