add the barbershop picture

--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,17 @@
 <table align=center>
 <tr>
 	<td align=center>
+	<img src="../../pub/usr/aa/photos/small/kutaisi_korean1.jpeg"
+	    width=250 height=334
+	    alt="me sitting on a couch with my new haircut and beard">
+	<small><br>a new look</small>
+	</td>
+</tr>
+</table>
+
+<table align=center>
+<tr>
+	<td align=center>
 	<img src="../../pub/usr/aa/photos/kutaisi_commie_block.jpeg"
 	    width=250 height=187
 	    alt="a horrible commie block">
