--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
 <table align=center>
 <tr>
 	<td align=center>
-	<img src="../../pub/usr/aa/photos/small/kutaisi_korean1.jpeg"
+	<img src="../../pub/usr/aa/photos/small/kutaisi_korean1.jpg"
 	    width=250 height=334
 	    alt="me sitting on a couch with my new haircut and beard">
 	<small><br>a new look</small>
